# sum-pairs

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: sum_pairs.py
tests/: test_sum_pairs.py
